fix z-index issue

--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -5,6 +5,7 @@
   font-family: variables.$font--primary;
   outline: none; //needed for removing safari focus ring
   position: relative;
+  z-index: 2;
   &.active {
     @include mixins.drop-shadow;
   }
